--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: sampleapp
         image: dockeritc778/sampleapp:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
