--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sampleapp
-        image: dockeritc778/sampleapp:latest
+        image: dockeritc778/sampleapp:IMAGE_TAG
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
