--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sampleapp
-        image: vibincholayil/sampleapp-jenkins-demo
+        image: vibincholayil/sampleapp:IMAGE_TAG
         imagePullPolicy: Always
         ports:
           - containerPort: 5000
