--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sampleapp-deployment
+  name: sampleapp-deployment  
 spec:
   replicas: 3
   selector:
@@ -14,16 +13,17 @@ spec:
         app: sampleapp
     spec:
       containers:
-        - name: sampleapp
-          image: vibincholayil/sampleapp:${IMAGE_TAG}
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 5000
-          env:
+      - name: sampleapp
+        image: vibincholayil/sampleapp:IMAGE_TAG
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 5000
+        env:
             - name: ASPNETCORE_URLS
               value: http://0.0.0.0:5000
 
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -33,6 +33,7 @@ spec:
     app: sampleapp
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 5000              
+      targetPort: 5000      
   type: LoadBalancer
+
