--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,38 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sampleapp-deployment  
+  name: sampleApp
+  namespace: devops  # optional
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: sampleapp
+      app: sampleApp
   template:
     metadata:
       labels:
-        app: sampleapp
+        app: sampleApp
     spec:
       containers:
-      - name: sampleapp
-        image: dockeritc778/sampleapp:IMAGE_TAG
-        imagePullPolicy: Always
+      - name: sampleApp
+        image: dockeritc778/sampleApp:v10.5
         ports:
         - containerPort: 5000
-        env:
-            - name: ASPNETCORE_URLS
-              value: http://0.0.0.0:5000
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: sampleapp-service
+  name: sampleApp-svc
 spec:
-  selector:
-    app: sampleapp
-  ports:
-    - protocol: TCP
-      port: 5000              
-      targetPort: 5000      
   type: LoadBalancer
+  selector:
+    app: sampleApp
+  ports:
+    - port: 80      
+      targetPort: 5000
