--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sampleapp
-        image: dockeritc778/sampleapp:v10.5
+        image: dockeritc778/sampleapp:IMAGE_TAG
         ports:
         - containerPort: 5000
 
