change path type to prefix in sampleapp ingress

--- a/helm/sampleapp/values.yaml
+++ b/helm/sampleapp/values.yaml
@@ -68,7 +68,7 @@ ingress:
     - host: dev.ddnsking.com
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
