--- a/helm/sampleapp/values.yaml
+++ b/helm/sampleapp/values.yaml
@@ -65,10 +65,11 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: dev.ddnsking.com
+    - host: test.devops.org
       paths:
         - path: /
           pathType: Prefix
+
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
